# tcc-monolito-microsservicos

./: .gitignore
microsservicos/: .gitignore  CLAUDE.md  pyproject.toml  template.yaml
microsservicos-mvc/catalogo-service/: pyproject.toml
microsservicos-mvc/catalogo-service/src/handlers/: catalogo.py
microsservicos-mvc/catalogo-service/tests/: test_catalogo.py
microsservicos/auth-service/: CLAUDE.md  conftest.py  deploy.sh  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
microsservicos/auth-service-mvc/: CLAUDE.md  deploy.sh  requirements.txt  samconfig.toml  template.yaml
microsservicos/auth-service-mvc/src/handlers/: auth.py  authorizer.py
microsservicos/auth-service-mvc/tests/: test_auth.py
microsservicos/auth-service/src/: container.py
microsservicos/auth-service/src/application/use_cases/: login.py  registrar.py
microsservicos/auth-service/src/domain/entities/: usuario.py
microsservicos/auth-service/src/domain/exceptions/: auth.py
microsservicos/auth-service/src/domain/repositories/: usuario_repository.py
microsservicos/auth-service/src/domain/services/: token_service.py
microsservicos/auth-service/src/handlers/: auth.py  authorizer.py  health.py
microsservicos/auth-service/src/infrastructure/config/: settings.py
microsservicos/auth-service/src/infrastructure/repositories/: dynamodb_usuario_repository.py  in_memory_usuario_repository.py
microsservicos/auth-service/src/presentation/handlers/: auth.py  (+2 more)
microsservicos/auth-service/tests/: fakes.py  test_auth.py  test_health.py
microsservicos/catalogo-service/: CLAUDE.md  conftest.py  deploy.sh  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
microsservicos/catalogo-service-mvc/: CLAUDE.md  deploy.sh  requirements-dev.txt  samconfig.toml  template.yaml
microsservicos/catalogo-service-mvc/src/handlers/: catalogo.py  health.py
microsservicos/catalogo-service-mvc/tests/: test_integration_contract.py
microsservicos/catalogo-service/src/: container.py
microsservicos/catalogo-service/src/application/: dtos.py  use_cases.py
microsservicos/catalogo-service/src/domain/: entities.py  exceptions.py  repositories.py  services.py  value_objects.py
microsservicos/catalogo-service/src/handlers/: catalogo.py
microsservicos/catalogo-service/src/infrastructure/: dynamodb_categoria_repository.py  dynamodb_produto_repository.py  sns_event_publisher.py
microsservicos/catalogo-service/src/shared/: repositories.py
microsservicos/catalogo-service/tests/: fakes.py  test_catalogo.py  test_health.py
microsservicos/estoque-service/: CLAUDE.md  deploy.sh  pyproject.toml  samconfig.toml  template.yaml
microsservicos/estoque-service-mvc/: .gitignore  CLAUDE.md  deploy.sh  samconfig.toml  template.yaml
microsservicos/estoque-service-mvc/src/handlers/: estoque.py  event_consumer.py  health.py
microsservicos/estoque-service-mvc/tests/: test_alerta_estoque.py  test_estoque.py  test_health.py  test_integration_contract.py
microsservicos/estoque-service/.github/workflows/: microsservicos.yml  monolito.yml
microsservicos/estoque-service/src/: container.py
microsservicos/estoque-service/src/handlers/: estoque.py  event_consumer.py  health.py
microsservicos/estoque-service/tests/: fakes.py  test_estoque.py  test_event_consumer.py  test_health.py
microsservicos/tasks/: INTEGRATION-CONTRACT.md  task-auth.md  task-catalogo.md  task-estoque.md
microsservicos/tests/auth/: test_auth.py  test_health.py
microsservicos/tests/catalogo/: test_health.py
microsservicos/tests/estoque/: test_event_consumer.py  test_health.py
monolito/: .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml
monolito-mvc/: CLAUDE.md  PRD.md  PROMPT.md  app.py  database.py  docker-compose.yml  models.py  pyproject.toml  schemas.py
monolito-mvc/routes/: auth.py  categorias.py  estoque.py  produtos.py
monolito-mvc/tests/: conftest.py  test_alerta_estoque.py  test_auth.py  test_categorias.py  test_estoque.py  test_health.py  test_produtos.py
monolito/src/auth/: container.py
monolito/src/auth/presentation/: middleware.py  routes.py  schemas.py
monolito/src/catalogo/: container.py
monolito/src/catalogo/presentation/: routes.py  schemas.py
monolito/src/estoque/: container.py
monolito/src/estoque/presentation/: routes.py  schemas.py
monolito/src/infrastructure/: observability.py
monolito/src/infrastructure/config/: settings.py
monolito/src/presentation/: app.py
monolito/src/presentation/routes/: health.py
monolito/src/shared/infrastructure/: observability.py
monolito/tests/: conftest.py
monolito/tests/integration/: test_alerta_estoque.py  test_auth.py  test_categorias.py  test_estoque.py  test_health.py  test_produtos.py
monolito/tests/unit/domain/: test_base_entity.py
(+260 files in other folders)
