[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microsservicos"
version = "0.1.0"
description = "Microsservicos Serverless - Produtos e Estoque"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.35.0",
    "pydantic>=2.0.0",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "dependency-injector>=4.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "radon>=6.0.0",
    "xenon>=0.9.0",
    "aws-sam-cli>=1.120.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "auth-service"]

[tool.setuptools.packages.find]
where = ["."]
include = ["auth-service*", "catalogo-service*", "estoque-service*"]

