[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "catalogo-service"
version = "0.1.0"
description = "Catalogo Service - Produtos e Categorias"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.35.0",
    "pydantic>=2.0.0",
    "dependency-injector>=4.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "radon>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
